@@ -8,6 +8,7 @@ import java.io.DataOutputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Scanner;
@@ -25,7 +26,7 @@ public class SkinFetcher {
         this.skinType = SkinType.getType(identifier);
         this.identifier = identifier;
 
-        if(skinCache.containsKey(identifier)){
+        if (skinCache.containsKey(identifier)) {
             SkinFetcher cached = skinCache.get(identifier);
             this.value = cached.getValue();
             this.signature = cached.getSignature();
@@ -37,7 +38,7 @@ public class SkinFetcher {
         load();
     }
 
-    public SkinFetcher(String identifier, String value, String signature){
+    public SkinFetcher(String identifier, String value, String signature) {
         this.skinType = SkinType.getType(identifier);
         this.identifier = identifier;
         this.value = value;
@@ -50,22 +51,22 @@ public class SkinFetcher {
         this.loaded = false;
         try {
             URL url = new URL(skinType.getRequestUrl().replace("{uuid}", identifier));
-            HttpURLConnection conn  = (HttpURLConnection) url.openConnection();
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod(skinType.getRequestMethod());
-            if(skinType == SkinType.URL){
+            if (skinType == SkinType.URL) {
                 conn.setDoOutput(true);
                 DataOutputStream outputStream = new DataOutputStream(conn.getOutputStream());
-                outputStream.writeBytes("url=" + URLEncoder.encode(identifier, "UTF-8"));
+                outputStream.writeBytes("url=" + URLEncoder.encode(identifier, StandardCharsets.UTF_8));
                 outputStream.close();
             }
 
-            String json = new Scanner(conn.getInputStream(), "UTF-8").useDelimiter("\\A").next();
+            String json = new Scanner(conn.getInputStream(), StandardCharsets.UTF_8).useDelimiter("\\A").next();
             JsonParser parser = new JsonParser();
             JsonObject obj = parser.parse(json).getAsJsonObject();
-            if(skinType == SkinType.UUID){
+            if (skinType == SkinType.UUID) {
                 this.value = obj.getAsJsonArray("properties").get(0).getAsJsonObject().getAsJsonPrimitive("value").getAsString();
                 this.signature = obj.getAsJsonArray("properties").get(0).getAsJsonObject().getAsJsonPrimitive("signature").getAsString();
-            } else if(skinType == SkinType.URL){
+            } else if (skinType == SkinType.URL) {
                 this.value = obj.getAsJsonObject("data").getAsJsonObject("texture").getAsJsonPrimitive("value").getAsString();
                 this.signature = obj.getAsJsonObject("data").getAsJsonObject("texture").getAsJsonPrimitive("signature").getAsString();
             }
@@ -96,7 +97,7 @@ public class SkinFetcher {
         return loaded;
     }
 
-    public enum SkinType{
+    public enum SkinType {
         UUID("https://sessionserver.mojang.com/session/minecraft/profile/{uuid}?unsigned=false", "GET"),
         URL("https://api.mineskin.org/generate/url", "POST");
 
@@ -108,16 +109,16 @@ public class SkinFetcher {
             this.requestMethod = requestMethod;
         }
 
+        public static SkinType getType(String s) {
+            return s.startsWith("http") ? URL : UUID;
+        }
+
         public String getRequestUrl() {
             return requestUrl;
         }
 
         public String getRequestMethod() {
             return requestMethod;
-        }
-
-        public static SkinType getType(String s){
-            return s.startsWith("http") ? URL : UUID;
         }
     }
 }
